publishing cmd_vel on micromouse

--- a/src/micromouse/config/pos_control.yaml
+++ b/src/micromouse/config/pos_control.yaml
@@ -1,8 +1,8 @@
   type: "diff_drive_controller/DiffDriveController"
   publish_rate: 50
 
-  left_wheel: ['left_front_wheel_joint', 'left_back_wheel_joint']
-  right_wheel: ['right_front_wheel_joint', 'right_back_wheel_joint']
+  left_wheel: 'left_wheel'
+  right_wheel: 'right_wheel'
 
   wheel_separation: 0.052
 
@@ -17,11 +17,11 @@
 
   # Velocity and acceleration limits for the robot
   linear:
-    x:
+    z:
       has_velocity_limits    : true
-      max_velocity           : 0.2   # m/s
+      max_velocity           : 0.02   # m/s
       has_acceleration_limits: true
-      max_acceleration       : 0.6   # m/s^2
+      max_acceleration       : 0.06   # m/s^2
   angular:
     z:
       has_velocity_limits    : true
