--- a/src/micromouse/CMakeLists.txt
+++ b/src/micromouse/CMakeLists.txt
@@ -140,6 +140,9 @@ include_directories(
 add_library(maze_plugin
   src/maze_plugin.cpp
 )
+add_library(mouse_plugin
+  src/mouse_plugin.cpp
+)
 
 ## Add cmake target dependencies of the library
 ## as an example, code may need to be generated before libraries
@@ -163,6 +166,9 @@ add_library(maze_plugin
 
 ## Specify libraries to link a library or executable target against
 target_link_libraries(maze_plugin
+  ${catkin_LIBRARIES} ${GAZEBO_LIBRARIES}
+)
+target_link_libraries(mouse_plugin
   ${catkin_LIBRARIES} ${GAZEBO_LIBRARIES}
 )
 
@@ -190,6 +196,7 @@ target_link_libraries(maze_plugin
 ## See http://docs.ros.org/melodic/api/catkin/html/howto/format1/building_libraries.html
 install(TARGETS
   maze_plugin
+  mouse_plugin
   ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
   LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
   RUNTIME DESTINATION ${CATKIN_GLOBAL_BIN_DESTINATION}
