--- a/src/micromouse/config/joints.yaml
+++ b/src/micromouse/config/joints.yaml
@@ -1,2 +1,2 @@
-type: "position_controllers/JointPositionController"
-joint: left_wheel
+type: "joint_state_controller/JointStateController"
+publish_rate: 50
