--- a/src/micromouse/package.xml
+++ b/src/micromouse/package.xml
@@ -85,7 +85,7 @@
   <!-- The export tag contains other, unspecified, tags -->
   <export>
       <gazebo_ros gazebo_model_path="${prefix}/models"/>
-      <gazebo_ros gazebo_media_path="${prefix}/models"/>
+      <gazebo_ros gazebo_media_path="${prefix}/worlds"/>
       <gazebo_ros plugin_path="$(prefix)/lib"/>
   </export>
 </package>
