--- a/src/pkg_vb_solution/package.xml
+++ b/src/pkg_vb_solution/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>pkg_vb_task</name>
+  <name>pkg_vb_solution</name>
   <version>0.0.0</version>
-  <description>The pkg_vb_task package</description>
+  <description>The pkg_vb_solution package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
@@ -19,7 +19,7 @@
   <!-- Url tags are optional, but multiple are allowed, one per tag -->
   <!-- Optional attribute type can be: website, bugtracker, or repository -->
   <!-- Example: -->
-  <!-- <url type="website">http://wiki.ros.org/pkg_vb_task</url> -->
+  <!-- <url type="website">http://wiki.ros.org/pkg_vb_solution</url> -->
 
 
   <!-- Author tags are optional, multiple are allowed, one per tag -->
@@ -69,7 +69,6 @@
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>urdf</exec_depend>
   <exec_depend>xacro</exec_depend>
-  <exec_depend>pkg_vb_sim</exec_depend>
   <exec_depend>message_runtime</exec_depend>
 
 
