--- a/src/pkg_vb_solution/package.xml
+++ b/src/pkg_vb_solution/package.xml
@@ -7,7 +7,7 @@
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="ubuntu@todo.todo">ubuntu</maintainer>
+  <maintainer email="ubuntu@todo.todo">shivam</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
@@ -70,6 +70,7 @@
   <exec_depend>urdf</exec_depend>
   <exec_depend>xacro</exec_depend>
   <exec_depend>message_runtime</exec_depend>
+  <exec_depend>pkg_vb_sim</exec_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
